@@ -1,0 +1,26 @@
+<?php
+#CMS - CMS Made Simple
+#(c)2004-2013 by Ted Kulp (wishy@users.sf.net)
+#(c)2011-2016 by The CMSMS Dev Team
+#Visit our homepage at: http://www.cmsmadesimple.org
+#
+#This program is free software; you can redistribute it and/or modify
+#it under the terms of the GNU General Public License as published by
+#the Free Software Foundation; either version 2 of the License, or
+#(at your option) any later version.
+#
+#This program is distributed in the hope that it will be useful,
+#but WITHOUT ANY WARRANTY; without even the implied warranty of
+#MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+#GNU General Public License for more details.
+#You should have received a copy of the GNU General Public License
+#along with this program; if not, write to the Free Software
+#Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
+#
+#$Id$
+
+use \CMSMS\HooKmanager as HookMgr;
+
+HookMgr::add_hook('Core::AddStylesheetPost','\CMSMS\Internal\CachedStylesheetsInDesignQuery::reset');
+HookMgr::add_hook('Core::EditStylesheetPost','\CMSMS\Internal\CachedStylesheetsInDesignQuery::reset');
+HookMgr::add_hook('Core::DeleteStylesheetPost','\CMSMS\Internal\CachedStylesheetsInDesignQuery::reset');
