@@ -58,6 +58,7 @@ Core - General
   - Refactoring of the admin login code to be cleaner, more efficient, more secure.
   - No longer allow any modules to auto-upgrade on frontend requests.
   - Fix problem with cms_filecache_driver::clear()
+  - Introduces the new Hook mechanism to allow optimizing cms_stylesheet a bit further.
 
   - #11080 - Parameter $adding in GetContentBlockFieldInput always FALSE.
   - #11093 - Bad error message in jquery.cmsms_autorefresh.js.
